fix: remove padding from header to fix gap in all docs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,7 +24,8 @@
  header {
      background-color: seashell;
      position: fixed;
-     padding: 0 1rem;
+     /*padding: 0 1rem;*/
+     margin-bottom: 0;
      z-index: 99;
      width: 100%;
      /*   box-shadow: 0 12px 1px .5px rgba(1, 70, 70, 0.315);*/
@@ -67,12 +68,12 @@
 
  /* Navbar styles with dropdown toggle */
  nav {
-     position: absolute;
+     /*position: absolute;*/
      background-color: seashell;
      width: 100%;
      left: 0;
      padding: 0 1rem;
-     /*  box-shadow: 0 12px 1px .5px rgba(1, 70, 70, 0.315);*/
+     /* box-shadow: 0 12px 1px .5px rgba(1, 70, 70, 0.315);*/
      display: none;
      top: 100%;
      bottom: 90%;
@@ -96,13 +97,14 @@
      /* Enlarge main element to push footer down*/
      flex: 1 0 auto;
      /* Add margin at the top to prevent content from being covered by the header */
-     margin-top: -10px;
+    /* margin-top: -10px;*/
      /* Enable flex properties for child elements */
      display: flex;
      flex-direction: column;
      background-color: rgb(155, 239, 239);
      padding-bottom: 0;
      margin-bottom: 0;
+     align-content:flex-start;
  }
 
  /*Hero image and cover text*/
@@ -110,10 +112,11 @@
      height: 600px;
      width: 100%;
      background: url("../images/acting/box3.JPG") no-repeat top center/cover;
-     position: relative;
-     padding-bottom: 0;
-     margin-bottom: 0;
+     /*position: relative;*/
+     padding-top: 0;
+     margin-top: 0;
      flex: auto;
+     align-items: flex-start;
  }
 
  #cover-text-hero {
@@ -121,7 +124,7 @@
      background-color: rgba(46, 99, 99, 0.8);
      color: seashell;
      font-size: 160%;
-     position: absolute;
+     /*position: absolute;*/
      width: 60%;
      border-radius: 0 5px 5px 0;
      min-height: 135px;
@@ -136,7 +139,7 @@
  }
 
  #my-info #about-me {
-     position: absolute;
+     /*position: absolute;*/
      right: 0;
      top: 117%;
  }
@@ -168,14 +171,62 @@
  }
 
  /*Actor-------------------------------------Actor-----------------------------------Actor----------------------------------------------------------------------------------------*/
+ #my-actor {
+     display: flex;
+     flex-direction: row;
+     justify-content: flex-start;
+ }
 
+ #actor-image {
+    padding-left: 60px;
+    align-self: center;
+}
+
+ #actor-image>img {
+     max-width: 400px;
+     max-height: 300px;
+     border-radius: 5px;
+     box-shadow: 0 2px 2px #3a3a3a;
+ }
+
+ #cover-text-actor {
+     background-color: rgba(46, 99, 99, .8);
+     width: 60%;
+     box-shadow: 0 2px 2px #3a3a3a;
+     border-radius: 0 5px 5px 0;
+     color: seashell;
+     padding: 20px 10px;
+     font-size: 100%;
+ }
+ #actor-list {
+    padding-top: 10px;
+
+    padding-left: 40px;
+    list-style-image: url(../list-icon/centos.svg);
+ }
+
+ #actor {
+     padding-top: 30px;
+     max-height: 300px;
+
+ }
+
+ #actor-roles {
+     padding-top: 10px;
+     line-height: 1px;
+
+ }
+
+ /*#my-actor {
+    align-items: flex-start;
+ }
 
  #cover-text-actor {
      text-align: left;
      background-color: rgba(46, 99, 99, 0.8);
      color: seashell;
      font-size: 100%;
-     position: absolute;
+     /*position: absolute;
      bottom: 100px;
      width: 60%;
      min-height: 400px;
@@ -198,7 +249,7 @@
  }
 
  #actor-roles {
-     position: absolute;
+     /*position: absolute;
      padding-top: 5px;
      line-height: 1px;
  }
@@ -212,14 +263,14 @@
      max-width: 400px;
      max-height: 300px;
      border-radius: 5px;
-     position: absolute;
+     /*position: absolute;
      float: right;
      bottom: 100px;
      left: 840px;
      top: 50px;
      box-shadow: 0 2px 2px #3a3a3a;
  }
-
+*/
  /*Costume-----------------------------------Costume---------------------------------Costume--------------------------------------------------------------------------------------*/
  #my-costume {
      width: 90%;
@@ -227,7 +278,7 @@
  }
 
  #my-costume #costume {
-     position: absolute;
+     /*position: absolute;*/
      right: 0;
  }
 
@@ -253,7 +304,7 @@
      max-height: 300px;
      border-radius: 5px;
      box-shadow: 0 2px 2px #3a3a3a;
-     position: absolute;
+     /*position: absolute;*/
      float: right;
      bottom: 180px;
      left: 45px;
@@ -352,7 +403,7 @@
  @media screen and (min-width: 768px) {
      nav {
          display: block;
-         position: relative;
+         /*position: relative;*/
          /*   box-shadow: none;*/
          width: fit-content;
          padding-left: 1rem;
